crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/no_comma_operator_not_triggered_in_v_for.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<template>
  <v-list-item
    v-for="(rate, index) in playbackRate.availablePlaybackRates.value"
    :key="index"
    :value="rate"
    @click="setRate(rate)"
  >
    <v-list-item-title>{{ formatRate(rate) }}</v-list-item-title>
  </v-list-item>
</template>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
