crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/no_undeclared_variables_not_triggered_for_script_setup_bindings.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<script setup lang="ts">
import { ALL_SKIP_CATEGORIES } from "ott-common";
const model = defineModel<string[]>();
</script>
<template>
  <div :data-categories="ALL_SKIP_CATEGORIES">{{ model }}</div>
</template>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
