crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/no_unused_variables_counts_vue_assignment_targets_as_used.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  },
  "linter": {
    "rules": {
      "correctness": {
        "noUnusedVariables": "error"
      }
    }
  }
}
```

## `file.vue`

```vue
<script setup lang="ts">
const isNewSheetOpen = defineModel<boolean>("isNewSheetOpen");
const actuallyUnused = true;
</script>
<template>
	<button @click="() => isNewSheetOpen = true">button</button>
</template>

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.vue:3:7 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This variable actuallyUnused is unused.
  
    1 │ <script setup lang="ts">
    2 │ const isNewSheetOpen = defineModel<boolean>("isNewSheetOpen");
  > 3 │ const actuallyUnused = true;
      │       ^^^^^^^^^^^^^^
    4 │ </script>
    5 │ <template>
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend actuallyUnused with an underscore.
  
    1 1 │   
    2 2 │   const isNewSheetOpen = defineModel<boolean>("isNewSheetOpen");
    3   │ - const·actuallyUnused·=·true;
      3 │ + const·_actuallyUnused·=·true;
    4 4 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
