crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/script_setup_generic_is_parsed.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.vue
```

## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<script setup lang="ts" generic="TData extends object, TRow">
defineProps<{ rows: TData[]; selected: TRow }>();
</script>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
