crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/sorts_imports_write.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --formatter-enabled=false --linter-enabled=false --write file.vue
```

## `file.vue`

```vue
<script setup lang="ts">
import * as vueUse from "vue-use";
import Button from "./components/Button.vue";
</script>
<template></template>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
