crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/supports_ts_in_embedded_expressions.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<script setup lang="ts">
        const num = 1
        </script>

        <template>
          <h1>{{ num as any }}</h1>
        </template>


```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
