crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/suppress_does_not_add_comments_for_imports_used_in_templates.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --suppress file.vue
```

## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<script>
import { mdiSquareOutline } from "@mdi/js";
</script>

<template>
  <v-icon :icon="mdiSquareOutline" />
</template>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
